--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docx-templates",
-  "version": "4.11.0",
+  "version": "4.11.0-tte",
   "description": "Template-based docx report creation",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -23,13 +23,13 @@
     "url": "git+https://github.com/guigrpa/docx-templates.git"
   },
   "scripts": {
-    "prepare": "yarn compile",
-    "compile": "rimraf ./lib && tsc && yarn rollup",
+    "prepare": "npm run compile",
+    "compile": "rimraf ./lib && tsc && npm run rollup",
     "rollup": "rollup -c",
-    "travis": "yarn compile && yarn test",
+    "travis": "npm compile && npm test",
     "jest": "jest --watch --coverage",
-    "test": "yarn lint && yarn testCovFull",
-    "testCovFull": "yarn testCovPrepare && yarn testDev && yarn testCovReport",
+    "test": "npm lint && npm testCovFull",
+    "testCovFull": "npm testCovPrepare && npm testDev && npm testCovReport",
     "testCovPrepare": "rm -rf ./coverage .nyc_output .nyc_tmp && mkdir .nyc_tmp",
     "testDev": "NODE_ENV=development jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-dev.json && rm -rf .nyc_output",
     "testCovReport": "cp -r .nyc_tmp .nyc_output && nyc report --reporter=html --reporter=lcov --reporter=text",
